# Console3D

./: CMakeLists.txt  README.md  main.c  virtual_screen.c  virtual_screen.h
src/: debug.c  debug.h  main.c  math.c  math.h  virtual_screen.c  virtual_screen.h
src/math/: matrix.h  matrix_op.c  matrix_op.h  shape.c  shape.h  vector.c  vector.h  vector_op.c  vector_op.h
src/screen/: debug.c  virtual_screen.c  virtual_screen.h  virtual_screen_data.h
